# plugin-moai-spine

./: CMakeLists.txt  README.md  plugin.CMake
moai-spine/: CMakeLists.txt  MOAISpine.cpp  MOAISpine.h  MOAISpineBone.cpp  MOAISpineSkeleton.cpp  MOAISpineSkeleton.h  MOAISpineSkeletonData.cpp  MOAISpineSlot.cpp  host.cpp  host.h
spine-c/: CMakeLists.txt  spine-c.sln
